test/sh/error/func/assign_bad_type.sk
# TODO: fix incorrect error (should be cannot assign type)

func() Int {
	return 1
}

x: Float = func()
